Fix too high page on mobile

--- a/src/web/src/assets/main.css
+++ b/src/web/src/assets/main.css
@@ -8,7 +8,6 @@
 #app {
     display: flex;
     justify-content: center;
-    min-height: 100vh;
     font-family: 'Montserrat', sans-serif;
 }
 
